@@ -1,4 +1,7 @@
 2014-02-07 arnaud.fontaine
+* Consider that description may not be needed, thus only one line, the label, is displayed.
+
+2014-02-07 arnaud.fontaine
 * Rename ERP5Site_getCompletionList for naming consistency sake.
 
 2014-02-07 arnaud.fontaine
